--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.Tp4.AppBarOverlay">
 
-        <LinearLayout android:layout_width="wrap_content"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView android:text="Valeur" android:id="@+id/TextView01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
-            <EditText android:text="" android:id="@+id/editTxtValeur"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:width="150dip">
-            </EditText>
-        </LinearLayout>
+            android:background="?attr/colorPrimary" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout android:layout_height="wrap_content"
-            android:orientation="horizontal" android:layout_width="fill_parent"
-            android:gravity="center_vertical|center_horizontal">
-            <Button android:text="Envoyer" android:id="@+id/btnEnvoyer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </Button>
-        </LinearLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout android:layout_height="wrap_content"
-            android:orientation="horizontal" android:layout_width="fill_parent"
-            android:gravity="center_vertical|center_horizontal">
-            <Button android:text="Quitter" android:id="@+id/btnQuitter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </Button>
-        </LinearLayout>
+        <androidx.viewpager.widget.PagerTabStrip
+            android:id="@+id/pager_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:paddingBottom="20dp"
+            android:paddingTop="20dp"
+            android:background="#2196F3"
+            android:textAppearance="@style/PagerTabStripText"/>
 
-        <LinearLayout android:layout_height="wrap_content"
-            android:orientation="horizontal" android:layout_width="fill_parent"
-            android:gravity="center_vertical|center_horizontal">
-            <Button android:text="Activer la seconde activité" android:id="@+id/btnAct2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </Button>
-        </LinearLayout>
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.viewpager.widget.ViewPager>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
